# samples

./: .gitignore  LICENSE  README.md
bash/camera/: gs_camera.sh
caffe/: caffe_dump.py
caffe/mtcnn/: det1_new.param  det1_save.caffemodel  dump_trans.sh
cpp/: CMakeLists.txt
cpp/boost/python_to_c/: CMakeLists.txt
cpp/camera/: Makefile.x11  camera-video-g2d  camera_g2d.cpp  camera_g2d.d
cpp/camera_g2d/: Makefile  Makefile.fbdev  camera_g2d.cpp
cpp/camera_g2d_v2/: Makefile  my.cpp
cpp/cfmini/: CMakeLists.txt  cfmini.cpp  common.h
cpp/cfmini/src/: cfmini.cpp  common.cpp  common.h  io.cpp  io.h
cpp/cfmini/test/mnist/: lenet_train_test.prototxt
cpp/gflags/: CMakeLists.txt  gflags_demo.cpp
cpp/helloworld/: CMakeLists.txt  helloworld.cpp  helloworld_simple.cpp  log.h  util.cpp  util.h
cpp/lmdb/: CMakeLists.txt  lmdb_test.cpp
cpp/loadprofile/: loadprofile.cpp  profile_sample.txt
cpp/uuid/: CMakeLists.txt  regrw.cpp  regrwclk.cpp  uuid.cpp
python/basic/: enum_files.py  loop.py
python/camera/: avi2mp4.sh  camera.py  camera_preview.py  camera_rtsp.py  camera_rtsp_capture.py  caputre_camera_to_jpeg.py  file_preview.py  start.sh
python/mqtt/: mqtt_pub.py  mqtt_sub.py
python/opencv/: gen_black_hole.py
